# mc_unitree2_wG1

./: CMakeLists.txt  README.md  compile_commands.json
CMakeModules/: FindCLI11.cmake
etc/: mc_rtc_example.yaml  old.yaml
src/: CMakeLists.txt  G1Control.cpp  G1Control.h  G1Revo2Control.cpp  G1Revo2Control.h  H1Control.cpp  H1Control.h  MCControlUnitree2.h  imgui.ini  main_g1.cpp  main_g1revo2.cpp  main_go2.cpp  main_h1.cpp
